@@ -4,9 +4,10 @@ license = Perl_5
 copyright_holder = Kent Fredric
 
 
-[=inc::lib]
+[Bootstrap::lib]
+
 [@Filter]
--bundle = @KENTNL
+-bundle = @Author::KENTNL
 -remove = ModuleBuild
 version_major  = 00
 version_minor  = 01
@@ -16,10 +17,11 @@ version_rel_day = 22
 version_rel_hour = 08
 version_rel_time_zone = Pacific/Auckland
 twitter_hash_tags = #perl #cpan
+auto_prereqs_skip = ^inc::
 
 [ModuleInstall]
 
-[Prereq]
+[Prereqs]
 Module::Install = 0.90
 Dist::Zilla::Role::PrereqSource = 0
 Moose::Autobox = 0.10
